# chempleter

./: .buildinfo  LICENSE  README.md  demo.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html  validation.html
.github/workflows/: chempleter-upload-to-pypi.yml  deploy_docs.yml  test_chempleter.yml
_sources/: demo.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt  validation.rst.txt
_sources/validations/: extend_v1.rst.txt
_static/: documentation_options.js
docs/: search.html  searchindex.js
docs/source/: conf.py  demo.rst  getting_started.rst  index.rst  installation.rst  usage.rst  validation.rst
docs/source/validations/: bridge_v1.rst  extend_v1.rst  extend_v2.rst
src/chempleter/: __init__.py  dataset.py  descriptors.py  gui.py  inference.py  model.py  processor.py  train.py  utils.py  validate.py
src/chempleter/data/: bridge_itos.json  bridge_stoi.json  itos.json  stoi.json
tests/: __init__.py  chempleter_tests.py  conftest.py  pytest.toml  test_dataset.py  test_descriptors.py  test_inference.py  test_processor.py
validations/: bridge_v1.html  extend_v1.html  extend_v2.html
