[project]
name = "chempleter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "rdkit>=2025.9.3",
    "selfies>=2.2.0",
    "torch>=2.9.1",
]

[project.optional-dependencies]
gpu128 = [
  "torch>=2.9.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "gpu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "tqdm>=4.67.1",
]
